# pipec

./: LICENSE  README.md
.github/workflows/: rust.yml
compiler/: Cargo.toml
compiler/pipec-arena/: Cargo.toml
compiler/pipec-arena-structures/: Cargo.toml
compiler/pipec-arena-structures/src/: adynlist.rs  alinkedlist.rs  astring.rs  avec.rs  lib.rs
compiler/pipec-arena/src/: lib.rs
compiler/pipec-args/: Cargo.toml
compiler/pipec-args/src/: lib.rs
compiler/pipec-ast/: Cargo.toml
compiler/pipec-ast/src/: lib.rs
compiler/pipec-ast/src/ast/: asttree.rs  mod.rs
compiler/pipec-ast/src/hir/: hirtree.rs  mod.rs
compiler/pipec-ast/src/tokenizer/: mod.rs  reader.rs  tokentree.rs
compiler/pipec-cache/: Cargo.toml
compiler/pipec-cache/src/: lib.rs
compiler/pipec-errors/: Cargo.toml
compiler/pipec-file-loader/: Cargo.toml
compiler/pipec-file-loader/src/: lib.rs
compiler/pipec-globals/: Cargo.toml
compiler/pipec-globals/src/: lib.rs
compiler/pipec-gst/: Cargo.toml
compiler/pipec-gst/src/: lib.rs
compiler/pipec-mir/: Cargo.toml
compiler/pipec-mir/src/: lib.rs
compiler/pipec-mir/src/mirgenerator/: mod.rs
compiler/pipec-prelude/: Cargo.toml
compiler/pipec-prelude/src/: lib.rs
compiler/pipec-semantic-analysis/: Cargo.toml
compiler/pipec-semantic-analysis/src/: lib.rs
compiler/pipec-semantic-analysis/src/semantic_analyzer/: mod.rs
compiler/pipec-span/: Cargo.toml
compiler/pipec-span/src/: lib.rs
compiler/pipec-tests/: Cargo.toml
compiler/pipec-tests/src/: lib.rs
compiler/pipec-tests/src/ast/: mod.rs
compiler/pipec-tests/src/ast/functiondeclaration/: mod.rs  test.pipec
compiler/pipec-tests/src/ast/generics/: functiongenerics.pipec  mod.rs  typegenerics.pipec
compiler/pipec-tests/src/ast/traits/: mod.rs  traits.pipec
compiler/pipec-tests/src/ast/usingstatements/: mod.rs  multifile.pipec  multifilemod.pipec  singlefile.pipec
compiler/pipec-tests/src/ast/variablemutability/: mod.rs  test.pipec
compiler/pipec-tests/src/ast/viewportdeclaration/: mod.rs  test.pipec
compiler/pipecc/: Cargo.toml
compiler/pipecc/src/: main.rs  readfile.rs
compiler/sling-ast/src/: lib.rs
compiler/sling-ast/src/parser/: mod.rs
compiler/sling-ast/src/tokenizer/: mod.rs  tokentree.rs
