[package]
name = "pipec-prelude"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.53"
pipec-arena = { version = "0.1.0", path = "../pipec-arena" }
pipec-args = { version = "0.1.0", path = "../pipec-args" }
pipec-ast = { version = "0.1.0", path = "../pipec-ast" }
pipec-file-loader = { version = "0.1.0", path = "../pipec-file-loader" }
pipec-gst = { version = "0.1.0", path = "../pipec-gst" }
pipec-semantic-analysis = { version = "0.1.0", path = "../pipec-semantic-analysis" }
