[package]
name = "pipec-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
pipec-arena = { version = "0.1.0", path = "../pipec-arena" }
pipec-ast = { version = "0.1.0", path = "../pipec-ast" }
pipec-file-loader = { version = "0.1.0", path = "../pipec-file-loader" }
pipec-gst = { version = "0.1.0", path = "../pipec-gst" }
